refactor: 채팅방 목록 조회 쿼리 최적화     - Redis 3N+2 + MySQL N+1 선형 증가 구조 -> Redis 배치 3종 + IN절 배치 → 4회 + 2회 고정